--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@fontsource/ibm-plex-sans": "^4.5.7",
+    "@fontsource/inter": "^4.5.10",
     "@fontsource/roboto": "^4.5.5",
     "axios": "^0.26.1",
     "firebase": "^9.6.10",
